adding vertical margin to main el

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Order summary card</title>
 </head>
 <body>
-    <main class="container-fluid d-flex justify-content-center align-items-center">
+    <main class="container-fluid d-flex justify-content-center align-items-center my-3">
         <div class="card text-center c">
             <img class="rounded-bottom-0" src="./images/illustration-hero.svg" alt="Girl listening and dancing to music." class="card-img img-fluid">
             <div class="card-body p-4">
